# rusty-scraps

./: .gitignore  ind.html
a_currency_repl/: .env  Cargo.toml
a_currency_repl/src/: main.rs
b_concurrency/: Cargo.toml
c_nix/: Cargo.toml
c_nix/src/: main.rs
d_shmem_across_progs/: Cargo.toml
d_shmem_across_progs/src/: cleanup.rs  create.rs  read.rs  write.rs
playground/: padovan  padovan.rs
